--- a/src/main/resources/templates/reservable/reservable-detail.html
+++ b/src/main/resources/templates/reservable/reservable-detail.html
@@ -69,9 +69,16 @@
                         <div class="chat-messages" id="chat-messages"></div>
                         <div class="chat-input-wrapper">
                             <input type="text" id="chat-input" placeholder="메시지를 입력하세요" />
-                            <button id="send-chat">전송</button>
+                            <button id="send-chat" type="button">
+                                <svg class="send-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/>
+                                </svg>
+                            </button>
                         </div>
                     </div>
+
+                    <!-- 채팅 알림 -->
+                    <div id="chat-notification" class="chat-notification d-none"></div>
 
                     <div class="dropdown-menu" aria-labelledby="userDropdown">
                         <!-- ADMIN이 아닌 경우 마이페이지 링크 표시 -->
