--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -423,10 +423,15 @@
     opacity: 0;
     transform: translateX(100%) translateY(-20px) scale(0.9);
     transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-    display: block;
+    display: -webkit-box;
     cursor: default;
     border: 1px solid rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(8px);
+    overflow: hidden;
+    max-width: 270px
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
 }
 
 .chat-notification:hover {
