--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -423,15 +423,14 @@
     opacity: 0;
     transform: translateX(100%) translateY(-20px) scale(0.9);
     transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-    display: -webkit-box;
+    display: block;
     cursor: default;
     border: 1px solid rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(8px);
     overflow: hidden;
-    max-width: 270px
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
+    max-width: 350px;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .chat-notification:hover {
