-고객: 예약한 돌봄 상세 정보 페이지(예약 상태 스티커 수정)

--- a/src/main/resources/templates/reservation/reservation-detail.html
+++ b/src/main/resources/templates/reservation/reservation-detail.html
@@ -164,7 +164,7 @@
         <p>
             <strong>📌 예약 상태:</strong>
             <span th:classappend="${reservation.status.name() == 'RESERVATION'} ? 'text-success' : 'text-danger'"
-                  th:text="${reservation.status.name() == 'RESERVATION'} ? '✅ 예약 완료' : '❌ 취소'"></span>
+                  th:text="${reservation.status.name() == 'RESERVATION'} ? '☑️ 예약 완료' : '❌ 취소'"></span>
         </p>
         <p><strong>사용된 포인트:</strong> <span th:text="${reservation.usingPoint == null ? '없음' : #numbers.formatInteger(reservation.usingPoint, 3, 'COMMA') + '원'}"></span></p>
         <p><strong>💲 원래 금액:</strong> <span th:text="${#numbers.formatInteger(reservation.originalPrice, 3, 'COMMA')}"></span>원</p>
